<resources>
    <string name="app_name">YggdrasilBookApp</string>
    <string name="app_title">Yggdrasil</string>
    <string name="app_parse_app_id">ApYcJ6UUoXaBOIS14LA2WGNUcIEZvuDQ4XwZiPbe</string>
    <string name="app_parse_app_key">6wqaeFqato5XmC5vjO1PMLclxSuNPCEEIEdvZfOE</string>
    <string name="app_facebook_app_id">2426112174194194</string>
    <string name="app_label_book">Book</string>
    <string name="app_label_books">Books</string>
    <string name="app_label_sign_in">Sign In</string>
    <string name="app_label_sign_up">Sign Up</string>
    <string name="app_label_place">Place</string>
    <string name="app_label_places">Places</string>
    <string name="app_label_characters">Characters</string>
    <string name="app_label_character">character</string>
    <string name="app_label_event">Event</string>
    <string name="app_label_events">Events</string>
    <string name="app_label_profile">Profile</string>
    <string name="app_label_profiles">Profiles</string>
    <string name="app_label_browse_msg">Browse the options above</string>
    <string name="app_label_browse_related">Related</string>
    <string name="app_label_next">Next</string>
    <string name="app_label_previous">Previous</string>
    <string name="app_label_detail_title">Title</string>
    <string name="app_label_detail_description">Description</string>
    <string name="app_label_detail_more_detail">More detail</string>
    <string name="app_label_or">Or</string>
    <string name="app_label_SignIn_with_in_with_facebook">Sign In with Facebook</string>
    <string name="app_label_SignUp_with_in_with_facebook">Sign Up with Facebook</string>
    <string name="app_label_password">Password</string>
    <string name="app_label_email">Email</string>
    <string name="app_label_name">Name</string>
    <string name="app_label_user_name">username</string>
    <string name="app_label_user_email">user@domain.com</string>
    <string name="app_label_user_password">123456</string>
</resources>
