<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.dadrix.yggdrasilbookapp.PlaceDetailActivity"
    style="@style/linearLayoutLight">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageButton
                    style="@style/arrowButton"
                    android:id="@+id/buttonPlaceDetailArrowLeft"
                    android:gravity="left|center"
                    android:src="@drawable/arrow_left"/>
                <ImageView
                    style="@style/pictureRegular"
                    android:id="@+id/imageViewPlaceDetail"
                    android:gravity="center"
                    android:src="@drawable/place_cover_sample"/>
                <ImageButton
                    style="@style/arrowButton"
                    android:id="@+id/buttonPlaceDetailArrowRight"
                    android:gravity="right|center"
                    android:src="@drawable/arrow_right"/>
            </LinearLayout>
            <TextView android:text="@string/app_label_detail_title"
                android:id="@+id/labelPlaceDetailTitle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/mediumLabelLight"
                android:gravity="center"
                android:layout_weight=".9"/>
            <TextView android:text="@string/app_label_detail_description"
                android:id="@+id/labelPlaceDetailDescription"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelLight"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView android:text="@string/app_label_detail_more_detail"
                android:id="@+id/labelPlaceDetailMoreDetail"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/mediumLabelLight"
                android:gravity="center"
                android:layout_weight=".9"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">
            <TextView android:text="@string/app_label_browse_related"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelDisabled"
                android:gravity="center"
                android:layout_weight="1"/>
            <org.lucasr.twowayview.TwoWayView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/listViewPlaceDetail"
                style="@style/TwoWayView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:drawSelectorOnTop="false"
                android:layout_weight=".6"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <Button
                        style="@style/mediumButtonLight"
                        android:layout_height="fill_parent"
                        android:text="@string/app_label_previous"
                        android:id="@+id/buttonPlaceDetailPrevious"/>
                    <Button
                        style="@style/mediumButtonLight"
                        android:layout_height="fill_parent"
                        android:text="@string/app_label_next"
                        android:id="@+id/buttonPlaceDetailNext"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
